# BridalERP

./: .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-10-employee-dashboard.md
docs/superpowers/specs/: 2026-05-10-employee-dashboard-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity_helper.rs  auth_guard.rs  db.rs  main.rs  models.rs  utils.rs  validation.rs
src-tauri/src/commands/: activity.rs  announcements.rs  auth.rs  calendar.rs  customers.rs  deliveries.rs  expenses.rs  home.rs  inventory.rs  mod.rs  reminders.rs  reports.rs  settings.rs  todos.rs  transactions.rs
src/components/: BridalBackground.tsx  Button.tsx  Card.tsx  ColorPicker.tsx  FilterBar.tsx  GlassDatePicker.tsx  GlassSelect.tsx  Input.tsx  Layout.tsx  Modal.tsx  ProfileModal.tsx  Sidebar.tsx  StatusBadge.tsx  Toast.tsx  TopHeader.tsx
src/hooks/: useAutoLogout.ts  usePermissions.ts
src/i18n/: ar.ts  de.ts  index.ts
src/lib/: api.ts  mantineTheme.ts
src/modules/activity/: ActivityLogPage.tsx
src/modules/auth/: Login.tsx
src/modules/calendar/: CalendarPage.tsx
src/modules/customers/: CustomerList.tsx
src/modules/dashboard/: Dashboard.tsx  EmployeeDashboard.tsx
src/modules/deliveries/: DeliveriesList.tsx
src/store/: authStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: formatters.ts  glassInput.ts  seedDatabase.ts  themeTokens.ts
(+14 files in other folders)
