[package]
name = "bridal-erp"
version = "1.0.0"
edition = "2021"

[package.metadata.bundle]
identifier = "com.bridalerp.app"
icon = ["icons/icon.ico", "icons/32x32.png", "icons/128x128.png"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
ureq = { version = "2", features = ["json"] }
tungstenite = "0.21"
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
